INT-13974: Change selector for snap-form-required to fix miss aligned icons and overflow in the text editor

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -379,7 +379,7 @@ a[aria-controls="snap-collapse-help"] {
         min-height: 250px !important;
     }
 
-    .form-inline[data-fieldtype="editor"] div:first-child {
+    .form-inline[data-fieldtype="editor"] {
         overflow: scroll;
     }
 }
